# acha-code-health-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EULA.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  acha.pro.spec  cli.py  dev-policy.json  policy.toml  pyproject.toml  requirements-dev.txt  requirements.txt  strict-policy.json
.github/workflows/: ace-ci.yml  ci.yml  codeql.yml  release-pro.yml  release.yml
agents/: analysis_agent.py  refactor_agent.py  validation_agent.py
docs/: ARCHITECTURE.md  ASSIST.md  CI.md  CODEMODS.md  CONTEXT.md  DETERMINISM.md  JOURNAL.md  LEARNING.md  PACKS.md  PERFORMANCE.md  PLANNER.md  POLICY.md  QUICKSTART_PRO.md  TELEMETRY.md  TUI.md
release/: GUMROAD_COPY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_PRO_1.0.0.md
reports/: README.md  analysis.json  patch_summary.json  validate.json
sample_project/: __init__.py  example.py  test_example.py
schemas/: analysis.schema.json  patch_summary.schema.json  policy.schema.json  validate.schema.json
schemas/v1/: edit.schema.json  edit_plan.schema.json  index.json  receipt.schema.json  unified_issue.schema.json
scripts/: bench_ace.py  release.py
src/ace/: __init__.py  autopilot.py  budget.py  cli.py  config.py  context_rank.py  depgraph.py  diffout.py  diffui.py  errors.py  explain.py  export.py  fileio.py  git_safety.py  guard.py  ignore.py  impact.py  index.py  journal.py  kernel.py  last_run.py  learn.py  llm.py  packs.py  packs_builtin.py  perf.py  planner.py  policy.py  policy_config.py  receipts.py  refactor.py  repair.py  repomap.py  report.py  rules_local.py  safety.py  session_log.py  skiplist.py  storage.py  summary.py  (+4 more)
src/acha/: __init__.py  baseline.py  cli.py  precommit.py  pro_license.py
tests/: __init__.py  test_analysis.py  test_analyzers_expanded.py  test_ci_smoke.py  test_cli_entry.py  test_cli_policy.py  test_critical_bug_fixes.py  test_exporter.py  test_gating_parallel.py  test_html_report.py  test_logger.py  test_packaging.py  test_parallel_determinism.py  test_performance.py  test_placeholder.py  test_policy.py  test_refactor.py  test_refactors_safe.py  test_reporters.py  test_run.py  test_sarif_determinism.py  test_v1_7_smoke.py  test_v2_0_smoke.py  test_validate.py
tests/ace/: __init__.py  test_autopilot_apply_budget.py  test_autopilot_dry_run.py  test_autorevert_parsefail.py  test_baseline.py  test_binary_search_deterministic.py  test_budget.py  test_cache.py  test_clean_skip_after_three_clean_runs.py  test_cli_smoke.py  test_config.py  test_config_toml_fallback.py  test_context_learning_skiplist_bridge.py  test_context_rank.py  test_context_rank_determinism.py  test_core_foundations.py  test_dead_imports_fix.py  test_depgraph.py  test_diffui.py  test_docker_multi_stage_user.py  test_docker_user_final_stage_check.py  test_encoding_newline.py  test_exit_codes.py  test_explain.py  test_fast_style_path_equivalence.py  test_git_safety.py  test_github_actions_nested_perms.py  test_github_actions_top_level_perms.py  test_health_map.py  test_ignore.py  test_impact.py  test_incremental_index.py  test_infra_docker.py  test_infra_gha.py  test_journal_revert.py  test_learning_never_drops_below_floor.py  test_learning_persists_between_runs.py  (+31 more)
utils/: ast_cache.py  exporter.py  html_reporter.py  logger.py  parallel_executor.py  patcher.py  policy.py  sarif_reporter.py
(+34 files in other folders)
